--- a/pom.xml
+++ b/pom.xml
@@ -1,31 +1,42 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>no.rmz.chordguesser</groupId>
-    <version>0.1-SNAPSHOT</version>
-    <artifactId>chordguesser</artifactId>
-    <name>chordguesser</name>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>no.rms.chordguesser</groupId>
+  <artifactId>chordguesser</artifactId>
+  <packaging>jar</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <name>my-app</name>
+  <url>http://www.rmz.no/</url>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+        
+    <dependency>
+      <groupId>net.sf.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>2.0</version>
+    </dependency>
+		
+      
+       <!--
 
-    <dependencies>
-        <!-- XXX: This is tmp added. Should be able to remove this when refactoring is complete -->
-        
-        
+
         <dependency>
             <groupId>junit</groupId>
             <version>4.0</version>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-      
-       <!--
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
-        
-       
         
         
      
@@ -50,7 +61,7 @@
             <artifactId>guice-jndi</artifactId>
         </dependency>
 -->
-       
-    </dependencies>
-   
+
+
+  </dependencies>
 </project>
