--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-
+ <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -8,8 +8,8 @@
     <version>1.0-SNAPSHOT</version>
     <name>chordguesser</name>
     <url>http://www.rmz.no/</url>
-    
-    
+
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -17,29 +17,29 @@
             <version>4.4</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
-            <version>2.0</version>
+            <version>2.3</version>
         </dependency>
-	
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>r08</version>
         </dependency>
-      
-      
+
+
         <dependency>
             <groupId>org.mockito</groupId>
             <version>1.9.0</version>
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
         <!--
-     
+
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
