--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version> 4.12</version>
             <scope>test</scope>
         </dependency>
 
@@ -37,13 +37,13 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>18.0</version>
+            <version>23.3-jre</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <version>1.9.0</version>
+            <version>2.0.2-beta</version>
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
