--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
         </plugins>
     </build>
     <dependencies>
+        
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -38,6 +45,13 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>23.3-jre</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>5.0.1</version>
         </dependency>
 
 
